--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,3 +5,9 @@ set -sg escape-time 0
 set -g base-index 1
 
 set -g mouse on
+
+# hjkl pane traversal
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
