--- a/.tmux.conf
+++ b/.tmux.conf
@@ -29,3 +29,7 @@ bind -n C-k run "($is_vim && tmux send-keys C-k) || \
 bind -n C-l run "($is_vim && tmux send-keys C-l) || \
                  tmux select-pane -R"
 bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+
+# split pane
+bind | split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
