--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,6 +3,7 @@
 set -g default-terminal "screen-256color"
 set -sg escape-time 0
 set -g base-index 1
+set-window-option -g mode-keys vi
 
 set -g mouse on
 
