--- a/.tmux.conf
+++ b/.tmux.conf
@@ -40,3 +40,9 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 
 set -g @plugin 'arcticicestudio/nord-tmux'
+set -g @plugin 'jimeh/tmux-themepack'
+
+# Theme
+set -g @themepack 'basic'
+
+run '~/.tmux/plugins/tpm/tpm'
